--- a/tp4/src/app/pelicula/pelicula.component.html
+++ b/tp4/src/app/pelicula/pelicula.component.html
@@ -1,9 +1,7 @@
 
-
-
 <div id="pagina">
     <div id="Edad_antigua">
-        <img>
+        <img src="{{valor}}">
         <div class="overlay">
             <div class="texto">EDAD ANTIGUA</div>
         </div>
