--- a/tp4/src/app/pelicula/pelicula.component.scss
+++ b/tp4/src/app/pelicula/pelicula.component.scss
@@ -8,7 +8,6 @@
     background-color: rgb(148, 128, 31);
     background: rgba(148, 128, 31, 0.5);
     overflow: hidden;
-    width: 100%;
     height: 0;
     transition: .5s ease;
     padding: 20px;
@@ -30,18 +29,24 @@
 #Edad_antigua{
     display:block;
     position:fixed;
-    visibility: hidden;
     border:3px solid rgb(184,178,147);
-    top:32%;
-    right:38%;
-    background-image: url("/assets/images/space.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 #pagina{
     display:block;
     position:fixed;
-    top:32%;
-    left:2%;
     z-index:99;
+    width: 250px;
+}
+#pagina.large{
+    height: 300px;
+}
+#pagina.small{
+    height: 100px;
+}
+img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block; 
 }
