--- a/Cinema/src/app/sala/sala.component.html
+++ b/Cinema/src/app/sala/sala.component.html
@@ -145,6 +145,9 @@
       </div>
     </div>
 
-    <div id="pantalla"></div>
     
+    
+  </div>
+  <div class="pantalla">
+      <img src="https://i.blogs.es/464068/jojo-s-bizarre-adventure/840_560.jpg">
   </div>
